# birb

./: .gitignore  Cargo.toml  LICENSE  birb.html  flake.nix  index.html  makefile  restart-audio-context.js
.cargo/: config.toml
.github/workflows/: rust.yml
assets/sprites/: birb.xcf  pipe-green.xcf
src/: main.rs
