[package]
name = "birb"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.3" }
bevy_rand = { version = "0.9.0", default-features = false, features = [
  "wyrand",
] }
bevy_rapier2d = { version = "0.29.0", features = [
  "simd-stable",
  "debug-render-2d",
] }
rand_core = "0.6.4"
rand = "0.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.15.3", features = ["wayland"] }
